<resources>
    <string name="app_name">AirRespeck</string>
    <string name="botnav_actsum">Summary</string>
    <string name="botnav_liveact">Live Activity</string>
    <string name="botnav_home">Home</string>
    <string name="botnav_settings">Settings</string>
    <string name="botnav_rehab">Rehab</string>
    <string name="actsum_day">Day</string>
    <string name="actsum_week">Week</string>
    <string name="detected_act"> <text size="9"> <i> detecting activity... </i> </text> </string>
    <string name="menu_actsum">Summary</string>
    <string name="device_found">found</string>
    <string name="waiting_for_data">Waiting for data</string>
    <string name="sb_empty">Empty</string>
    <string name="sb_value_segment">Current value</string>
    <string name="activity_summary_title">Activity summary of past …</string>
    <string name="reading_pm10">PM 10</string>
    <string name="reading_pm2_5">PM 2.5</string>
    <string name="reading_pm1_0">PM 1.0</string>
    <string name="reading_temp">Temperature</string>
    <string name="reading_rel_humidity">Humidity</string>
    <string name="reading_bins">Bins total</string>
    <string name="readings_respeck_title">RESpeck readings</string>
    <string name="readings_respeck_acceleration_title">RESpeck acceleration data</string>
    <string name="reading_breathing_rate">Breathing rate</string>
    <string name="reading_avg_breathing_rate">Minute average breathing rate</string>
    <string name="readings_step_count">Step count in minute</string>
    <string name="readings_pulseox_title">Pulseox readings</string>
    <string name="reading_pulse">Pulse</string>
    <string name="reading_spo2">SpO2</string>
    <string name="readings_inhaler_title">Inhaler readings</string>
    <string name="reading_press_time">Inhaler last used</string>
    <string name="reading_unit_bpm">BrPM</string>
    <string name="reading_unit_ug_m3" translatable="false">µg/m³</string>
    <string name="reading_unit_c" translatable="false">°C</string>
    <string name="reading_unit_percent" translatable="false">%</string>
    <string name="reading_unit_beats_pm">BPM</string>
    <string name="reading_unit_none"></string>
    <string name="graphs_pms_title">PM 1, PM 2.5, PM 10</string>
    <string name="graphs_bins_title">Current reading: bin count</string>
    <string name="graphs_breathing_flow_title">Breathing signal (flow rate)</string>
    <string name="graphs_bins_description">Particle count in bin</string>
    <string name="menu_subject">Device connectivity</string>
    <string name="menu_airspeck_readings">Airspeck Readings</string>
    <string name="menu_airspeck_graphs">Airspeck Graphs</string>
    <string name="menu_airspeck_map">Airspeck Map</string>
    <string name="menu_activity_summary">Activity Summary</string>
    <string name="menu_respeck_readings">RESpeck Readings</string>
    <string name="menu_activity_logging">Activity Logging</string>
    <string name="menu_activity_raw_accel_respeck">RESpeck Acceleration Data</string>
    <string name="menu_respeck_demo">RESpeck Demo</string>
    <string name="menu_inout_prediction">Indoor Prediction Testing</string>
    <string name="menu_coughing">Coughing Test</string>
    <string name="menu_upload_files">Upload Files</string>
    <string name="menu_pulseox">Pulseox Readings</string>
    <string name="menu_inhaler">Inhaler Readings</string>
    <string name="menu_activity_logging_general">General Activity Logging</string>
    <string name="menu_airspeck_subgroup">Airspeck</string>
    <string name="menu_respeck_subgroup">RESpeck</string>
    <string name="menu_pulseox_subgroup">Pulseox</string>
    <string name="menu_inhaler_subgroup">Inhaler</string>
    <string name="menu_other_subgroup">Others</string>
    <string name="action_supervised_mode">Supervised mode</string>
    <string name="action_subject_mode">Subject mode</string>
    <string name="action_volume_recording">Volume recording</string>
    <string name="action_close_app">Close app</string>
    <string name="action_check_for_updates">Check for updates</string>
    <string name="action_view_config">Pairing info</string>
    <string name="action_view_battery">Battery info</string>
    <string name="title_activity_volume_recording">Volume recording</string>
    <string name="button_text_start_recording">
        <font size="12">Start</font>
    </string>
    <string name="button_text_stop_recording">
        <font size="13">Stop</font>
    </string>
    <string name="button_text_cancel_recording">
        <font size="12">Cancel</font>
    </string>
    <string name="button_text_upload_recording">
        <font size="12">Upload</font>
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_ui_general">General</string>
    <string name="pref_title_font_size">Font size</string>
    <string-array name="pref_font_size_list">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string-array name="pref_font_size_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_category_ui_menu">Menus</string>
    <string name="pref_title_menu_mode">Menu mode</string>
    <string-array name="pref_menu_mode_list">
        <item>Buttons</item>
        <item>Tabs</item>
    </string-array>
    <string-array name="pref_menu_mode_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_menu_buttons_padding">Buttons padding</string>
    <string-array name="pref_menu_buttons_padding_list">
        <item>0 dp</item>
        <item>1 dp</item>
        <item>2 dp</item>
        <item>3 dp</item>
        <item>4 dp</item>
        <item>5 dp</item>
        <item>6 dp</item>
        <item>7 dp</item>
        <item>8 dp</item>
        <item>9 dp</item>
        <item>10 dp</item>
        <item>11 dp</item>
        <item>12 dp</item>
        <item>13 dp</item>
        <item>14 dp</item>
        <item>15 dp</item>
        <item>16 dp</item>
        <item>17 dp</item>
        <item>18 dp</item>
        <item>19 dp</item>
        <item>20 dp</item>
    </string-array>
    <string-array name="pref_menu_buttons_padding_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="pref_title_menu_tab_icons">Tab icons</string>
    <string name="pref_description_menu_tab_icons">Show icons in tabs</string>
    <string name="pref_title_menu_graphs_screen">Graphs screen</string>
    <string name="pref_description_menu_graphs_screen">Enable access to Graphs screen</string>
    <string name="pref_category_ui_apps">Other Apps</string>
    <string name="pref_title_airspeck_app_access">AirSpeck</string>
    <string name="pref_description_airspeck_app_access">Enable access to AirSpeck App</string>
    <string name="pref_title_respeck_app_access">RESpeck</string>
    <string name="pref_description_respeck_app_access">Enable access to RESpeck App</string>
    <string name="pref_category_ui_readings">Air quality readings</string>
    <string name="pref_title_readings_mode_home_screen">Display mode in home screen</string>
    <string-array name="pref_readings_mode_home_screen_list">
        <item>List</item>
        <item>Graphic: Bar</item>
    </string-array>
    <string-array name="pref_readings_mode_home_screen_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_readings_mode_aqreadings_screen">Display mode in air quality screen</string>
    <string-array name="pref_readings_mode_aqreadings_screen_list">
        <item>List</item>
        <item>Graphic: Bar</item>
        <item>Graphic: Arc</item>
    </string-array>
    <string-array name="pref_readings_mode_aqreadings_screen_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="supervised_mode_dialog_message">Enter password to access supervised mode</string>
    <string name="supervised_mode_dialog_enter">Enter</string>
    <string name="supervised_mode_dialog_cancel">Cancel</string>
    <string name="wrong_orientation_message">The RESpeck sensor seems to be fastened in the wrong position.
        Please fasten it as depicted in the image.</string>
    <string name="wrong_orientation_message_dutch">De RESpeck sensor is mogelijk onjuist bevestigd.
        Plaats de sensor zoals aangegeven en in deze afbeelding.</string>
    <string name="wrong_orientation_done">Done</string>
    <string name="gps_disabled_message">App requires GPS to be turned on.</string>
    <string name="notification_gps_title">Airrespeck: GPS</string>
    <string name="notification_gps_text">Collecting location information</string>
    <string name="notification_speck_title">RESpeck and Airspeck</string>
    <string name="notification_speck_text">Listening for sensor data</string>
    <string name="title_activity_maps_aq">Map</string>
    <string name="maps_loader_live_button">Show live data on map</string>
    <string name="maps_loader_historical_button">Show historical data on map</string>
    <string name="maps_loader_historical_data_title">Choose timeframe for historical data</string>
    <string name="maps_loader_invalid_timestamps_to_before_from">Selected end of time period must lie after selected beginning.</string>
    <string name="maps_loader_invalid_timestamps">Please specify the time and date of beginning and end of time period</string>
    <string name="maps_loader_invalid_timestamp_in_future">Time period cannot lie in future</string>
    <string name="maps_loader_period_too_long">You can only display three hours of data at a time</string>
    <string name="low_pollution_legend">Low pollution</string>
    <string name="high_pollution_legend">High pollution</string>
    <string name="location_request_dialog_title">Please allow location permission</string>
    <string name="location_request_dialog_message">App requires location permission to link recorded pollution levels
        with your location</string>
    <string name="storage_request_dialog_title">Please allow storage permission</string>
    <string name="storage_request_dialog_message">App requires storage permission to load the configuration file
        and to store recorded values</string>
    <string name="dialog_button_ok">OK</string>
    <string name="mic_request_dialog_title">Please allow microphone permission</string>
    <string name="mic_request_dialog_message">App requires microphone permission when adding a voice comment
        with your location</string>
    <string name="config_view_title">Pairing configuration</string>
    <string name="title_activity_security_key">Security Key</string>
    <string name="security_key_explanation">Please login to receive a security key for your application. This
    key is used to encrypt all recorded data, so that no one can view or modify the data before it is uploaded
    to the server. Note that you need a network connection for this operation.</string>
</resources>