<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_ui_general">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_font_size_list"
            android:entryValues="@array/pref_font_size_list_values"
            android:key="font_size"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_font_size" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_ui_menu">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_menu_mode_list"
            android:entryValues="@array/pref_menu_mode_list_values"
            android:key="menu_mode"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_menu_mode" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="menu_mode"
            android:key="menu_tab_icons"
            android:summary="@string/pref_description_menu_tab_icons"
            android:title="@string/pref_title_menu_tab_icons" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="airspeck_app_access"
            android:summary="@string/pref_description_airspeck_app_access"
            android:title="@string/pref_title_airspeck_app_access" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="respeck_app_access"
            android:summary="@string/pref_description_respeck_app_access"
            android:title="@string/pref_title_respeck_app_access" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_ui_readings">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_readings_mode_home_screen_list"
            android:entryValues="@array/pref_readings_mode_home_screen_list_values"
            android:key="readings_mode_home_screen"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_readings_mode_home_screen" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_readings_mode_aqreadings_screen_list"
            android:entryValues="@array/pref_readings_mode_aqreadings_screen_list_values"
            android:key="readings_mode_aqreadings_screen"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_readings_mode_aqreadings_screen" />
    </PreferenceCategory>

</PreferenceScreen>
