<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="https://schemas.android.com/tools"
      tools:context="com.specknet.airrespeck.activities.MainActivity">

    <group>
        <item
            android:id="@+id/action_subject_mode"
            android:orderInCategory="10"
            android:title="@string/action_subject_mode"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_volume_recording"
            android:orderInCategory="11"
            android:title="@string/action_volume_recording"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_view_config"
            android:orderInCategory="20"
            android:title="@string/action_view_config"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_close_app"
            android:orderInCategory="100"
            android:title="@string/action_close_app"
            app:showAsAction="never"/>

    </group>

</menu>